--- a/client/src/ui/style/global.css
+++ b/client/src/ui/style/global.css
@@ -1,3 +1,8 @@
 a.secondary {
   --text-decoration: none;
 }
+
+article {
+  padding-top: calc(var(--block-spacing-vertical) / 2);
+  padding-bottom: calc(var(--block-spacing-vertical) / 2);
+}
